Bug 552493  Hang on select-all in large textbox (which repeats if I unfocus & focus Firefox) r=roc